--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
         </dependency>
         <dependency>
             <groupId>org.httpobjects.jetty</groupId>
-            <artifactId>httpobjects-jetty-9</artifactId>
-            <version>0.24.0-SNAPSHOT</version>
+            <artifactId>httpobjects-jetty-7-and-8</artifactId>
+            <version>0.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.httpobjects</groupId>
             <artifactId>httpobjects</artifactId>
-            <version>0.24.0-SNAPSHOT</version>
+            <version>0.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -111,4 +111,16 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
